tests/spec/compile-fail/034_dynamic_move_self_interface_method.zn
// category: compile-fail
// profile: freestanding
// purpose: self interface methods cannot be dynamically dispatched through Box<Interface>

module tests.fail.dynamicMoveSelfInterfaceMethod;

interface Consumable {
    fn finish(move self) -> U32;
}

fn bad(item: Box<Consumable>) -> U32 {
    return move item.finish(); // expected-error: self interface method cannot be dynamically dispatched
}
